implemented docker image that works