@@ -1,30 +1,23 @@
-FROM alpine:latest as packager
+FROM ubuntu:20.04
+
+RUN apt-get update && \
+    apt-get install -y openjdk-17-jdk
+
 MAINTAINER FRANZZLE
-
-RUN apk --no-cache add openjdk11-jdk openjdk11-jmods
-
-ENV JAVA_MINIMAL="/opt/java-minimal"
-
-# build minimal JRE
-RUN /usr/lib/jvm/java-11-openjdk/bin/jlink \
-    --verbose \
-    --add-modules java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument,java.rmi,jdk.unsupported \
-    --compress 2 --strip-debug --no-header-files --no-man-pages \
-    --output "$JAVA_MINIMAL"
-
-FROM alpine:latest
-
-ENV JAVA_HOME=/opt/java-minimal
-ENV PATH="$PATH:$JAVA_HOME/bin"
-
-COPY --from=packager "$JAVA_HOME" "$JAVA_HOME"
-COPY target/*.jar /opt/app.jar
+COPY build/libs/*.jar /opt/app.jar
 
 ADD target/rhubarb.gz /rhubarb
 
-RUN addgroup -S kiara 
-RUN adduser --uid 999 -S kiara -G kiara
-USER 999
+USER root
+RUN mkdir /output
+RUN chmod 775 /output
+RUN mkdir -p /output/lipsyncwavs
+
+# RUN addgroup -S franzzle
+# RUN adduser --uid 999 -S franzzle -G franzzle
+# USER franzzle
+#
+# RUN chown -R franzzle:franzzle /output/lipsyncwavs
 
 ENV JAVA_OPTS="-Xms256m -Xmx1024m"
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /opt/app.jar" ]
